12336 list of posts (#12634)
* Issue #12336 - Dependent field ajax callback.

* Issue #12336 - List fo Posts additonal fields and display modes. WIP

* Issue #12336 - code added for lop form ui

* Issue #12336 - lop form fields width

* Issue #12336 - Form changes and Logic for appear/expire fields.

* Issue #12336 - Form changes and Logic for appear/expire fields.

* Issue #12336 - Events addtional logic for sorting and filtering.

* Issue #12336 - Events addtional logic for sorting and filtering.

* Issue #12336 - Additional sorting for Events,Publication,etc

* Issue #12336 - Required display modes.

* Issue #12336 - added ui changes for lop

* Issue #12336 - New Tests for newer sorting methods and code.

* Issue #12336 - Display style changes and test seggregation.

* Issue #12336 - Test fixes.

* Issue #12336 - added faq and events styles and fixed code review

* Issue #12336 - config changes added label to inline

* Issue #12336 - added publication template and fixed code review

* Issue #12336 - changed image position in slide teaser publication

* Issue #12336 - Test seggregation.

* Issue #12336 - Hiding field labels.

* Issue #12336 - publication citation ui

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ env:
     - JOB="job:run-kernel-tests widgets-2"
     - JOB="job:run-kernel-tests widgets-3"
     - JOB="job:run-kernel-tests os-theme-preview,cp-appearance,profiles"
-    - JOB="job:run-kernel-tests publications-1,redirect"
+    - JOB="job:run-kernel-tests publications-1,redirect,widgets-4"
     - JOB="job:run-kernel-tests publications-2,wysiwyg"
     - JOB="job:run-kernel-tests vsite"
     - JOB="job:run-kernel-tests os"
