--- a/config/sync/core.entity_form_display.block_content.list_of_posts.default.yml
+++ b/config/sync/core.entity_form_display.block_content.list_of_posts.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.block_content.list_of_posts.body
     - field.field.block_content.list_of_posts.field_content_type
     - field.field.block_content.list_of_posts.field_display_style
+    - field.field.block_content.list_of_posts.field_events_should_expire
     - field.field.block_content.list_of_posts.field_filter_by_vocabulary
     - field.field.block_content.list_of_posts.field_number_of_items_to_display
     - field.field.block_content.list_of_posts.field_publication_types
@@ -42,39 +43,45 @@ content:
     third_party_settings: {  }
     type: options_select
     region: content
+  field_events_should_expire:
+    weight: 7
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_filter_by_vocabulary:
-    weight: 5
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     type: filter_by_vocab
     region: content
   field_number_of_items_to_display:
-    weight: 9
+    weight: 12
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_publication_types:
-    weight: 26
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: options_buttons
     region: content
   field_show:
-    weight: 27
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_show_more_link:
-    weight: 6
+    weight: 9
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_show_pager:
-    weight: 8
+    weight: 11
     settings:
       display_label: true
     third_party_settings: {  }
@@ -87,7 +94,7 @@ content:
     type: options_select
     region: content
   field_url_for_the_more_link:
-    weight: 7
+    weight: 10
     settings:
       placeholder_url: ''
       placeholder_title: ''
