--- a/config/sync/core.entity_view_display.block_content.list_of_posts.default.yml
+++ b/config/sync/core.entity_view_display.block_content.list_of_posts.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.block_content.list_of_posts.body
     - field.field.block_content.list_of_posts.field_content_type
     - field.field.block_content.list_of_posts.field_display_style
+    - field.field.block_content.list_of_posts.field_events_should_expire
     - field.field.block_content.list_of_posts.field_filter_by_vocabulary
     - field.field.block_content.list_of_posts.field_number_of_items_to_display
     - field.field.block_content.list_of_posts.field_publication_types
@@ -25,6 +26,7 @@ hidden:
   body: true
   field_content_type: true
   field_display_style: true
+  field_events_should_expire: true
   field_filter_by_vocabulary: true
   field_number_of_items_to_display: true
   field_publication_types: true
