--- a/config/sync/core.entity_view_display.node.events.default.yml
+++ b/config/sync/core.entity_view_display.node.events.default.yml
@@ -23,17 +23,14 @@ dependencies:
     - field.field.node.events.rng_registration_type
     - field.field.node.events.rng_reply_to
     - field.field.node.events.rng_status
+    - image.style.gallery
     - node.type.events
   module:
     - cp_taxonomy
     - date_recur
-    - layout_builder
     - os_media
     - text
     - user
-third_party_settings:
-  layout_builder:
-    sections: {  }
 id: node.events.default
 targetEntityType: node
 bundle: events
@@ -63,7 +60,6 @@ content:
       media_switch: ''
       view_mode: default
       ratio: ''
-      iframe_lazy: '1'
       image: ''
       title: ''
       link: ''
@@ -135,7 +131,7 @@ content:
     region: content
   field_location:
     weight: 1
-    label: above
+    label: inline
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -143,7 +139,7 @@ content:
     region: content
   field_recurring_date:
     weight: 0
-    label: above
+    label: inline
     settings:
       format_type: os_event_date_format
       occurrence_format_type: os_event_date_format
