--- a/config/sync/core.entity_view_display.node.page.default.yml
+++ b/config/sync/core.entity_view_display.node.page.default.yml
@@ -6,16 +6,13 @@ dependencies:
     - field.field.node.page.body
     - field.field.node.page.field_attached_media
     - field.field.node.page.field_taxonomy_terms
+    - image.style.gallery
     - node.type.page
   module:
     - cp_taxonomy
-    - layout_builder
     - os_media
     - text
     - user
-third_party_settings:
-  layout_builder:
-    sections: {  }
 id: node.page.default
 targetEntityType: node
 bundle: page
@@ -45,7 +42,6 @@ content:
       media_switch: ''
       view_mode: default
       ratio: ''
-      iframe_lazy: '1'
       image: ''
       title: ''
       link: ''
