--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -51,6 +51,7 @@ module:
   datetime: 0
   datetime_range: 0
   dblog: 0
+  disqus: 0
   dynamic_entity_reference: 0
   dynamic_page_cache: 0
   easy_breadcrumb: 0
