--- a/config/sync/field.field.block_content.list_of_posts.field_content_type.yml
+++ b/config/sync/field.field.block_content.list_of_posts.field_content_type.yml
@@ -15,7 +15,9 @@ label: 'Content Type'
 description: ''
 required: false
 translatable: false
-default_value: {  }
+default_value:
+  -
+    value: all
 default_value_callback: ''
 settings: {  }
 field_type: list_string
