--- a/composer.json
+++ b/composer.json
@@ -188,6 +188,7 @@
         "drupal/date_recur": "^2.0",
         "drupal/date_recur_modular": "^1.0@alpha",
         "drupal/easy_breadcrumb": "^1.8",
+        "drupal/elasticsearch_connector": "^7.0@alpha",
         "drupal/entity_reference_revisions": "^1.6",
         "drupal/field_tools": "^1.0@alpha",
         "drupal/fullcalendar": "1.x-dev",
