--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -55,6 +55,7 @@ module:
   dynamic_page_cache: 0
   easy_breadcrumb: 0
   editor: 0
+  elasticsearch_connector: 0
   entity: 0
   entity_reference: 0
   entity_reference_revisions: 0
