Issue #12375 - Missing features in page contextual links  (#12655)
* Issue #12570 - Removed prev & next buttons for today.

* Issue #12375 - Fixed editing non-book nodes issue.

* Issue #12375 - Resolved contextual_links issue for sub-pages.

* Issue #12375 - Provided Book outline access to users.

* Issue #12375 - Outline contextual links redirection handled.

* Issue #12375 - PR feedback addressed.

* Issue #12375 - Page node export feature.

* Issue #12375 - Print option for pages added.

* Issue #12375 - Tests added for checking links.

* Issue #12375 - Corrected tests and print-friendly links code fixed.

* Issue #12375 - Added os_pages permission to group administrator role.

* Issue #12375 - Addressed PR feedback.

* Issue #12375 - add print screen ui as per d7

* Issue #12375 - code cleanup

* Issue #12375 - Customized page and book export pages for UI.

* Issue #12375 - Pushing print css file.

* Issue #12375 - fixed print screen ui

* Issue #12375 - page content type pages added title bold

* Issue #12375 - fixed a11y issue

--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -11,6 +11,7 @@ is_admin: false
 permissions:
   - 'access content'
   - 'access contextual links'
+  - 'access printer-friendly version'
   - 'access toolbar'
   - 'create personal group'
   - 'delete bibcite_reference artwork revisions'
