--- a/config/sync/group.role.personal-administrator.yml
+++ b/config/sync/group.role.personal-administrator.yml
@@ -16,6 +16,7 @@ permissions:
   - 'access control panel'
   - 'access group_node overview'
   - 'access private apps'
+  - 'add content to books'
   - 'administer apps'
   - 'administer apps settings'
   - 'administer bibcite_reference'
@@ -39,6 +40,7 @@ permissions:
   - 'create group_node:presentation entity'
   - 'create group_node:software_project entity'
   - 'create group_node:software_release entity'
+  - 'create new books'
   - 'create url aliases'
   - 'delete any group_entity:bibcite_reference entity'
   - 'delete any group_entity:block_content entity'
