--- a/config/sync/user.role.anonymous.yml
+++ b/config/sync/user.role.anonymous.yml
@@ -10,6 +10,7 @@ weight: 0
 is_admin: false
 permissions:
   - 'access content'
+  - 'access printer-friendly version'
   - 'create anonymous_ rng_contact'
   - 'restful post user_registration'
   - 'use text format filtered_html'
