--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,8 @@ env:
   matrix:
     - JOB=job:check-coding-standards
     - JOB=job:run-unit-tests
-    - JOB="job:run-kernel-tests widgets-1,widgets-2,widgets-3,os-theme-preview,cp-appearance,profiles,publications-1,redirect,widgets-4"
-    - JOB="job:run-kernel-tests publications-2,wysiwyg,vsite,os,cp,other,cp-menu"
+    - JOB="job:run-kernel-tests widgets-2,widgets-3,os-theme-preview,cp-appearance,profiles,publications-1,redirect,widgets-4"
+    - JOB="job:run-kernel-tests widgets-1,publications-2,wysiwyg,vsite,os,cp,other,cp-menu"
     - JOB="job:run-functional-tests classes,events,pages,cp,media-browser,os-theme-preview,breadcrumbs,analytics,cp-menu,publications,cp-appearance,redirect,twitter,vsite_favicon"
     - JOB="job:run-functional-tests os,vsite"
     - JOB="job:run-functional-javascript-tests classes,pages,publications,cp-appearance,cp-menu,profiles,cp,mailchimp,metatag,redirect"
