Issue #12453 - Implement Dataverse Dataset widget and test (#12688)
* Issue #12453 - Implement Dataverse Dataset widget and test

* Issue #12453 - Implement integer embed height

* Issue #12453 - Fix test

* Issue #12453 - Field is integer, no need to parse

* Issue #12453 - Add comment

--- a/config/sync/os_widgets.dataverse.yml
+++ b/config/sync/os_widgets.dataverse.yml
@@ -1,3 +1,4 @@
+base_url: 'https://dataverse.harvard.edu/'
 listing_base_url: 'https://dataverse.harvard.edu/dataverse/'
 search_base_url: 'https://dataverse.harvard.edu/dataverse.xhtml'
 _core:
