--- a/profile/modules/apps/os_widgets/config/schema/os_widgets.schema.yml
+++ b/profile/modules/apps/os_widgets/config/schema/os_widgets.schema.yml
@@ -27,6 +27,9 @@ os_widgets.dataverse:
   type: config_entity
   label: 'Dataverse'
   mapping:
+    base_url:
+      type: string
+      label: 'Base URL'
     listing_base_url:
       type: string
       label: 'Listing base URL'
