Issue #12135 - Create add term link to action links (#12690)

--- a/profile/modules/cp/modules/cp_taxonomy/cp_taxonomy.links.action.yml
+++ b/profile/modules/cp/modules/cp_taxonomy/cp_taxonomy.links.action.yml
@@ -3,3 +3,9 @@ entity.taxonomy_vocabulary.cp.add_form:
   title: 'Add vocabulary'
   appears_on:
     - cp.taxonomy
+
+entity.taxonomy_term.cp.add_form:
+  route_name: cp.taxonomy.term.add
+  title: 'Add term'
+  appears_on:
+    - cp.taxonomy.list
