12335 list of files (#12629)
* Issue #12335 - LOF form and basic structure.

* Issue #12335 - LOF widget config and twig

* Issue #12335 - LOF widget config and twig

* Issue #12335 - add basic ui for title

* Issue #12335 - lof form and image grid css added

* Issue #12335 - lof form css added

* Issue #12335 - LOF form ajax

* Issue #12336 - Dependent field ajax callback.

* Issue #12336 - List fo Posts additonal fields and display modes. WIP

* Issue #12336 - code added for lop form ui

* Issue #12336 - lop form fields width

* Issue #12336 - Form changes and Logic for appear/expire fields.

* Issue #12336 - Form changes and Logic for appear/expire fields.

* Issue #12336 - Events addtional logic for sorting and filtering.

* Issue #12336 - Events addtional logic for sorting and filtering.

* Issue #12336 - Additional sorting for Events,Publication,etc

* Issue #12336 - Required display modes.

* Issue #12336 - added ui changes for lop

* Issue #12336 - New Tests for newer sorting methods and code.

* Issue #12336 - Display style changes and test seggregation.

* Issue #12335 - Form changes

* Issue #12336 - Test fixes.

* Issue #12336 - added faq and events styles and fixed code review

* Issue #12336 - config changes added label to inline

* Issue #12336 - added publication template and fixed code review

* Issue #12336 - changed image position in slide teaser publication

* Issue #12335 - Save

* Issue #12336 - Test seggregation.

* Issue #12335 - Icon and twig changes.

* Issue #12336 - Hiding field labels.

* Issue #12335 - More icons and title.

* Issue #12336 - publication citation ui

* Issue #12335 - fixed form field ui lof

* Issue #12335 - download link for full and teaser mode with twig changes.

* Issue #12335 - Grid modes and twig changes.

* Issue #12335 - added lof ui code

* Issue #12335 - Code refactoring.

* Issue #12336 - LOP default values.

* Issue #12335 - LOP test 

--- a/config/sync/core.entity_view_display.media.document.teaser.yml
+++ b/config/sync/core.entity_view_display.media.document.teaser.yml
@@ -6,28 +6,24 @@ dependencies:
     - core.entity_view_mode.media.teaser
     - field.field.media.document.field_media_file
     - field.field.media.document.field_taxonomy_terms
-    - image.style.thumbnail
     - media.type.document
-  module:
-    - image
 id: media.document.teaser
 targetEntityType: media
 bundle: document
 mode: teaser
 content:
-  thumbnail:
-    type: image
+  name:
+    type: string
     weight: 0
-    label: hidden
-    settings:
-      image_style: thumbnail
-      image_link: ''
     region: content
+    label: visually_hidden
+    settings:
+      link_to_entity: true
     third_party_settings: {  }
 hidden:
   created: true
   field_media_file: true
   field_taxonomy_terms: true
   langcode: true
-  name: true
+  thumbnail: true
   uid: true
