--- a/config/sync/core.entity_view_display.media.audio.teaser.yml
+++ b/config/sync/core.entity_view_display.media.audio.teaser.yml
@@ -6,28 +6,24 @@ dependencies:
     - core.entity_view_mode.media.teaser
     - field.field.media.audio.field_media_file
     - field.field.media.audio.field_taxonomy_terms
-    - image.style.thumbnail
     - media.type.audio
-  module:
-    - image
 id: media.audio.teaser
 targetEntityType: media
 bundle: audio
 mode: teaser
 content:
-  thumbnail:
-    type: image
+  name:
+    type: string
     weight: 0
-    label: hidden
-    settings:
-      image_style: thumbnail
-      image_link: ''
     region: content
+    label: visually_hidden
+    settings:
+      link_to_entity: true
     third_party_settings: {  }
 hidden:
   created: true
   field_media_file: true
   field_taxonomy_terms: true
   langcode: true
-  name: true
+  thumbnail: true
   uid: true
