--- a/config/sync/core.entity_view_display.media.image.teaser.yml
+++ b/config/sync/core.entity_view_display.media.image.teaser.yml
@@ -7,7 +7,7 @@ dependencies:
     - field.field.media.image.field_image_caption
     - field.field.media.image.field_media_image
     - field.field.media.image.field_taxonomy_terms
-    - image.style.thumbnail
+    - image.style.os_image_small
     - media.type.image
   module:
     - image
@@ -16,20 +16,27 @@ targetEntityType: media
 bundle: image
 mode: teaser
 content:
-  thumbnail:
+  field_media_image:
     type: image
     weight: 0
-    label: hidden
-    settings:
-      image_style: thumbnail
-      image_link: ''
     region: content
+    label: visually_hidden
+    settings:
+      image_style: os_image_small
+      image_link: ''
+    third_party_settings: {  }
+  name:
+    type: string
+    weight: 1
+    region: content
+    label: visually_hidden
+    settings:
+      link_to_entity: true
     third_party_settings: {  }
 hidden:
   created: true
   field_image_caption: true
-  field_media_image: true
   field_taxonomy_terms: true
   langcode: true
-  name: true
+  thumbnail: true
   uid: true
