--- a/config/sync/group.role.personal-member.yml
+++ b/config/sync/group.role.personal-member.yml
@@ -16,6 +16,7 @@ permissions:
   - 'access private apps'
   - 'create group_node:landing_page entity'
   - 'delete any group_node:landing_page entity'
+  - 'download media file'
   - 'leave group'
   - 'update any group_node:landing_page entity'
   - 'update own group_membership content'
