--- a/config/sync/group.role.personal-outsider.yml
+++ b/config/sync/group.role.personal-outsider.yml
@@ -12,6 +12,7 @@ audience: outsider
 group_type: personal
 permissions_ui: true
 permissions:
+  - 'download media file'
   - 'view group'
   - 'view group_entity:bibcite_reference content'
   - 'view group_entity:bibcite_reference entity'
