--- a/profile/modules/apps/os_widgets/os_widgets.services.yml
+++ b/profile/modules/apps/os_widgets/os_widgets.services.yml
@@ -18,6 +18,6 @@ services:
     arguments: ['@current_user', '@entity_type.manager', '@vsite.context_manager']
     tags:
       - { name: access_check, applies_to: _add_slideshow_access_check }
-  os_widgets.lop_helper:
-    class: Drupal\os_widgets\Helper\ListOfPostsWidgetHelper
-    arguments: ['@database']
+  os_widgets.list_widgets_helper:
+    class: Drupal\os_widgets\Helper\ListWidgetsHelper
+    arguments: ['@database', '@entity_type.manager']
