12616 google tag manager (#12682)
* Save.

* Save.

* Save.

* Resolve merge conflicts.

* Issue #12057 - GTM and settings.

* Issue #12057 - GTM and settings.

* Issue #12057 - Merge conflict

* Issue #12616 - Form changes

* Issue #12616 - Form test

* Issue #12616 - Form test.

* Issue #12616 - Tests and code refctoring.

* Issue #12616 - Tests and code refctoring.

* Issue #12616 - Code refactoring.

* Issue #12616 - Do not allow admin pages to be tracked.

* Issue #12616 - Code refactoring.

* Issue #12616 - Test fix.

--- a/composer.json
+++ b/composer.json
@@ -192,6 +192,7 @@
         "drupal/field_tools": "^1.0@alpha",
         "drupal/fullcalendar": "1.x-dev",
         "drupal/google_analytics": "^2.4",
+        "drupal/google_tag": "^1.2",
         "drupal/group": "^1.0-rc4",
         "drupal/group_purl": "1.0-alpha1",
         "drupal/groupmenu": "^1.0-beta4",
