Issue #Elastic - Elastic Search with Pages

--- a/composer.json
+++ b/composer.json
@@ -214,7 +214,8 @@
         "drupal/rng_quick": "^1.1",
         "drupal/rng_views": "^1.7",
         "drupal/robotstxt": "^1.2",
-        "drupal/search_api": "^1.9",
+        "drupal/search_api": "^1.15",
+        "drupal/search_api_page": "^1.0@beta",
         "drupal/shorten": "2.x-dev",
         "drupal/slick": "^2.0",
         "drupal/slick_media": "^2.0",
