--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -147,7 +147,8 @@ module:
   rng_quick: 0
   rng_views: 0
   robotstxt: 0
-  search: 0
+  search_api: 0
+  search_api_page: 0
   serialization: 0
   shorten: 0
   slick: 0
