--- a/config/sync/elasticsearch_connector.cluster.elasticsearch_default.yml
+++ b/config/sync/elasticsearch_connector.cluster.elasticsearch_default.yml
@@ -4,7 +4,7 @@ status: '1'
 dependencies: {  }
 cluster_id: elasticsearch_default
 name: elasticsearch-default
-url: 'elasticsearch:9200'
+url: 'http://elasticsearch:9200'
 options:
   multiple_nodes_connection: true
   use_authentication: 0
