--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       - ./:/var/www/html:cached
 
   elasticsearch:
-    image: wodby/elasticsearch:latest
+    image: wodby/elasticsearch:7-5.3.0
     container_name: "${PROJECT_NAME}_elasticsearch"
     environment:
       ES_JAVA_OPTS: "-Xms500m -Xmx500m"
