Issue #12525 - Disqus comment field changes.

--- a/config/sync/core.entity_form_display.node.blog.default.yml
+++ b/config/sync/core.entity_form_display.node.blog.default.yml
@@ -5,10 +5,12 @@ dependencies:
   config:
     - field.field.node.blog.body
     - field.field.node.blog.field_attached_media
+    - field.field.node.blog.field_disqus_comments
     - field.field.node.blog.field_taxonomy_terms
     - node.type.blog
   module:
     - cp_taxonomy
+    - disqus
     - field_layout
     - layout_discovery
     - os_media
@@ -45,6 +47,12 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: media_browser_widget
+    region: content
+  field_disqus_comments:
+    weight: 27
+    settings: {  }
+    third_party_settings: {  }
+    type: disqus_comment
     region: content
   field_taxonomy_terms:
     weight: 11
