--- a/config/sync/core.entity_view_display.media.oembed.full.yml
+++ b/config/sync/core.entity_view_display.media.oembed.full.yml
@@ -24,8 +24,8 @@ content:
     weight: 0
     label: visually_hidden
     settings:
-      max_width: 100%
-      max_height: '701'
+      max_width: '560'
+      max_height: '315'
     third_party_settings: {  }
     region: content
   name:
