Issue #12525 - Disqus tests added.

--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -131,4 +131,5 @@ permissions:
   - 'view bibcite_reference web_service revisions'
   - 'view bibcite_reference website revisions'
   - 'view control_panel in toolbar'
+  - 'view disqus comments'
   - 'view media'
