Issue #12525 - View Disqus permissions for anonymous users added.

--- a/config/sync/user.role.anonymous.yml
+++ b/config/sync/user.role.anonymous.yml
@@ -16,4 +16,5 @@ permissions:
   - 'use text format filtered_html'
   - 'use text format title_filter'
   - 'view bibcite_reference'
+  - 'view disqus comments'
   - 'view media'
