--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -59,6 +59,7 @@ module:
   entity: 0
   entity_reference: 0
   entity_reference_revisions: 0
+  facets: 0
   fakeobjects: 0
   field: 0
   field_layout: 0
@@ -79,6 +80,7 @@ module:
   image_widget_crop: 0
   inline_form_errors: 0
   key_value_field: 0
+  kint: 0
   language: 0
   layout_builder: 0
   layout_discovery: 0
@@ -122,6 +124,7 @@ module:
   os_redirect_to_source: 0
   os_rest: 0
   os_rss: 0
+  os_search: 0
   os_search_solr: 0
   os_software: 0
   os_taxonomy: 0
