--- a/composer.json
+++ b/composer.json
@@ -291,7 +291,6 @@
             "command -v npm install || echo \"NPM not installed. Please install it and run composer install again.\"",
             "DrupalProject\\composer\\ScriptHandler::installBootstrapLibrary",
             "DrupalProject\\composer\\ScriptHandler::installOsToolbarLibrary",
-            "DrupalProject\\composer\\ScriptHandler::placeCustomThemes",
             "./scripts/register-cs.sh",
             "./scripts/install-hooks.sh"
         ],
@@ -302,8 +301,7 @@
             "DrupalProject\\composer\\ScriptHandler::installFullcalendarLibrary",
             "command -v npm update || echo \"NPM not installed. Please install it and run composer install.\"",
             "DrupalProject\\composer\\ScriptHandler::installBootstrapLibrary",
-            "DrupalProject\\composer\\ScriptHandler::installOsToolbarLibrary",
-            "DrupalProject\\composer\\ScriptHandler::placeCustomThemes"
+            "DrupalProject\\composer\\ScriptHandler::installOsToolbarLibrary"
         ],
         "code-standard": [
             "./vendor/bin/phpcs --standard=Drupal --ignore=*.yml,*.md",
