12457 content editor permissions (#12691)
* Issue #12457 - Added permissions for Content Editor

* Issue #12457 - Added set site owner option to Manage User page

* Issue #12457 - Reverting commit to wrong branch

* Issue #12457 - Bug fixes for content editor permissions

* Issue #12457 - Removed old permission name

* Issue #12457 - Content editor PR changes

* Issue #12457 - fixed faq contextual ui

* Issue #12457 - Content editor travis build fix

--- a/config/sync/group.role.personal-administrator.yml
+++ b/config/sync/group.role.personal-administrator.yml
@@ -41,6 +41,7 @@ permissions:
   - 'create group_node:software_project entity'
   - 'create group_node:software_release entity'
   - 'create new books'
+  - 'create publications'
   - 'create url aliases'
   - 'delete any group_entity:bibcite_reference entity'
   - 'delete any group_entity:block_content entity'
