--- a/config/sync/group.role.personal-content_editor.yml
+++ b/config/sync/group.role.personal-content_editor.yml
@@ -32,6 +32,7 @@ permissions:
   - 'create group_node:software_project entity'
   - 'create group_node:software_release entity'
   - 'create new books'
+  - 'create publications'
   - 'create url aliases'
   - 'delete own group_entity:bibcite_reference entity'
   - 'delete own group_entity:block_content entity'
@@ -50,6 +51,7 @@ permissions:
   - 'delete own group_node:software_release entity'
   - 'download media file'
   - 'leave group'
+  - 'manage vsite content'
   - 'promote nodes'
   - 'publish nodes'
   - 'update any group_entity:bibcite_reference entity'
