Issue #12456 - Tabs & accordion widget corrected. (#12672)
* Issue #12456 - Tabs & accordion widget corrected.

* Issue #12456 - Removed extra lines.

* Issue #12456 - Added hook_entity_delete to handle deleted widgets.

* Issue #12456 - Pushing incomplete code for entity_delete.

* Issue #12456 - Tab and accordion widgets references added.

* Issue #12456 - Fixed null rows in tabs & accordion widget.

* Issue #12456 - collapsing when other panel open and fixed sign issues

* Issue #12456 - Patch for contextual links issue on same elements on page.

* Issue #12456 - Moved accordion library from twig.

* Issue #12456 - Tests added after deleting Tabs child block entities.

* Issue #12456 - Patch for contextual links.

* Issue #12456 - Added validation for block.

* Issue #12456 - Removed check for block.

* Issue #12456 - Resolved rssfeedTests error.

--- a/config/sync/field.field.block_content.tabs.field_widget_collection.yml
+++ b/config/sync/field.field.block_content.tabs.field_widget_collection.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - block_content.type.accordion
     - block_content.type.addthis
     - block_content.type.basic
     - block_content.type.custom_text_html
@@ -37,6 +38,7 @@ settings:
   handler: 'default:block_content'
   handler_settings:
     target_bundles:
+      accordion: accordion
       addthis: addthis
       basic: basic
       custom_text_html: custom_text_html
