--- a/config/sync/views.view.past_events_calendar.yml
+++ b/config/sync/views.view.past_events_calendar.yml
@@ -20,6 +20,7 @@ dependencies:
     - text
     - views_ical
     - vsite
+    - vsite_infinite_scroll
 id: past_events_calendar
 label: 'Past events Calendar'
 module: views
@@ -703,6 +704,7 @@ display:
         filters: false
         filter_groups: false
         title: false
+        pager: false
       row:
         type: 'entity:node'
         options:
@@ -826,11 +828,33 @@ display:
         weight: 2
         context: '0'
         menu_name: main
+      pager:
+        type: vsite_infinite_scroll
+        options:
+          items_per_page: 0
+          offset: 0
+          id: '0'
+          total_pages: ''
+          tags:
+            previous: '‹ Previous'
+            next: 'Next ›'
+          expose:
+            items_per_page: 0
+            items_per_page_label: 'Items per page'
+            items_per_page_options: '5, 10, 25, 50'
+            items_per_page_options_all: 0
+            items_per_page_options_all_label: '- All -'
+            offset: 0
+            offset_label: Offset
+          views_infinite_scroll:
+            button_text: 'Load More'
+            automatically_load_content: 0
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url.query_args
         - 'user.node_grants:view'
       tags:
         - 'config:field.storage.node.field_recurring_date'
