Issue #12696 - fix event tests random failure (#12698)
* Issue #12696 - trial and error - fix event tests random failure

Setting a timezone for the Travis builds.

* Issue #12696 - change timezone is tests as well

* Issue #12696 - Fix - incorrect Travis docker settings

--- a/.travis/docker-compose.yml
+++ b/.travis/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       DB_NAME: $DB_NAME
       DB_DRIVER: $DB_DRIVER
       PHP_XDEBUG: $PHP_XDEBUG_ENABLED
+      PHP_DATE_TIMEZONE: "America/New_York"
     volumes:
       - ./:/var/www/html
 
