--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       PHP_MAX_INPUT_TIME: $PHP_MAX_INPUT_TIME
       PHP_IDE_CONFIG: $PHP_IDE_CONFIG # See https://www.jetbrains.com/help/phpstorm/debugging-a-php-cli-script.html
       COMPOSER_AUTH: '{"github-oauth": {"github.com": "${GITHUB_TOKEN}"}}'
+      PHP_DATE_TIMEZONE: "America/New_York"
     volumes:
       - ./:/var/www/html:cached
 
